# orionkindel_dot_com

./: .gitignore  0.index.js  CNAME  Cargo.toml  README.md  bsconfig.json  index.html  index.js  package-lock.json  package.json  spago.dhall  style.css  webpack.config.js
.github/workflows/: publish.yml
bundleOutput/: index.js
src/: Card.purs  FlowField.re  Index.bs.js  Index.re  Index.res  Infix.re  Main.purs  ReprocessingDemo.bs.js  ReprocessingDemo.re  ReprocessingDemo.res  Subheader.purs  Swirl.res  Title.purs  Utils.purs
src/flow_field/: Cargo.toml
src/flow_field/src/: constants.rs  lib.rs  particle.rs  state.rs  vector.rs
src/wasm_swirl/: Cargo.toml  rustfmt.toml
src/wasm_swirl/src/: constant.rs  fluid.rs  lib.rs  math.rs  space.rs  time.rs  utils.rs
src/wasm_swirl/src/space/: coords.rs  matrix.rs  mod.rs  vector.rs
static/: index.html  style.css
